ISPN-14877 Added possibility to configure REST client using properties