@@ -3,6 +3,7 @@ package org.infinispan.cli.connection.rest;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
+import java.util.Properties;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -19,13 +20,12 @@ import org.kohsuke.MetaInfServices;
  **/
 @MetaInfServices
 public class RestConnector implements Connector {
-   private
-   final Pattern HOST_PORT = Pattern.compile("(\\[[0-9A-Fa-f:]+\\]|[^:/?#]*)(?::(\\d*))");
+   private final Pattern HOST_PORT = Pattern.compile("(\\[[0-9A-Fa-f:]+\\]|[^:/?#]*)(?::(\\d*))");
 
    @Override
-   public Connection getConnection(String connectionString, SSLContextSettings sslContextSettings) {
+   public Connection getConnection(Properties properties, String connectionString, SSLContextSettings sslContextSettings) {
       try {
-         RestClientConfigurationBuilder builder = new RestClientConfigurationBuilder();
+         RestClientConfigurationBuilder builder = new RestClientConfigurationBuilder().withProperties(properties);
          if (connectionString == null || connectionString.isEmpty() || "-".equals(connectionString)) {
             builder.addServer().host("localhost").port(11222);
          } else {
@@ -45,9 +45,9 @@ public class RestConnector implements Connector {
                String userInfo = url.getUserInfo();
                if (userInfo != null) {
                   String[] split = userInfo.split(":");
-                  builder.security().authentication().username(URLDecoder.decode(split[0], StandardCharsets.UTF_8.name()));
+                  builder.security().authentication().username(URLDecoder.decode(split[0], StandardCharsets.UTF_8));
                   if (split.length == 2) {
-                     builder.security().authentication().password(URLDecoder.decode(split[1], StandardCharsets.UTF_8.name()));
+                     builder.security().authentication().password(URLDecoder.decode(split[1], StandardCharsets.UTF_8));
                   }
                }
                if (url.getProtocol().equals("https")) {
@@ -60,6 +60,7 @@ public class RestConnector implements Connector {
                }
             }
          }
+         builder.header("User-Agent", Version.getBrandName() + " CLI " + Version.getBrandVersion());
          return new RestConnection(builder);
       } catch (Throwable e) {
          return null;
